--- a/src/main/resources/templates/panelUsuario.html
+++ b/src/main/resources/templates/panelUsuario.html
@@ -21,8 +21,8 @@
                         <ul>
                             <li><a href="./pedirCita.html">Citas Médicas</a></li>
                             <li><a href="./estadisticasUsuario.html">Estadísticas</a></li>
-                            <li><a href="#">Recordatorios</a></li>
-                            <li><a href="./">Historial Médico</a></li>
+                            <li><a href="./recordatorios.html">Recordatorios</a></li>
+                            <li><a href="./historialMedico.html">Historial Médico</a></li>
                             <li><a href="./registroTratamiento.html">Tratamientos</a></li>
                             <li><a href="./configUsuario.html">Configuración</a></li>
                         </ul>
@@ -61,7 +61,6 @@
         </main>
 
         <div th:replace="fragments/footer :: footer"></div>
-
     </section>
 </body>
 </html>
