Cambios en el html y js de registro, conexion con BBDD y creacion de la parte back de registro de Usuario

--- a/src/main/resources/templates/panelUsuario.html
+++ b/src/main/resources/templates/panelUsuario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="./media/favicon_IA_Medica.ico" type="image/x-icon">
     <meta name="description" content="Panel de usuario con estadísticas, recordatorios y gestión médica para mejorar el seguimiento de tratamientos.">
     <link rel="stylesheet" href="./css/style2.css">
-    <script src="../static/js/panelUsuario.js"></script>
-    <script src="../static/js/asistente.js"></script>
+    <script type="text/javascript" defer src="../static/js/panelUsuario.js"></script>
+    <script type="text/javascript" defer src="../static/js/asistente.js"></script>
 </head>
 <body>
     <section class="contenedor">
